crates/ferrum-interfaces/tests/ui/vnext/fail/unvalidated_execution_event_is_not_deserialize.rs
use ferrum_interfaces::vnext::UnvalidatedExecutionEvent;

fn decode(bytes: &[u8]) {
    let _: UnvalidatedExecutionEvent = serde_json::from_slice(bytes).unwrap();
}

fn main() {}
