crates/ferrum-interfaces/tests/ui/vnext/fail/unvalidated_execution_event_is_not_deserialize.stderr
error[E0277]: the trait bound `UnvalidatedExecutionEvent: serde::Deserialize<'de>` is not satisfied
 --> tests/ui/vnext/fail/unvalidated_execution_event_is_not_deserialize.rs:4:40
  |
4 |     let _: UnvalidatedExecutionEvent = serde_json::from_slice(bytes).unwrap();
  |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `serde_core::de::Deserialize<'_>` is not implemented for `UnvalidatedExecutionEvent`
  |
  = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `UnvalidatedExecutionEvent` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `serde_core::de::Deserialize<'de>`:
            &'a Path
            &'a [u8]
            &'a str
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
          and $N others
note: required by a bound in `serde_json::from_slice`
 --> $CARGO/serde_json-$VERSION/src/de.rs
  |
  | pub fn from_slice<'a, T>(v: &'a [u8]) -> Result<T>
  |        ---------- required by a bound in this function
  | where
  |     T: de::Deserialize<'a>,
  |        ^^^^^^^^^^^^^^^^^^^ required by this bound in `from_slice`
